--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,13 @@
 cmake_minimum_required(VERSION 3.16)
-project(minishell)
+project(minishell C)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_C_STANDARD 11)
 
 include_directories(.)
+include_directories(libft)
+include_directories(libft/printf)
+add_subdirectory(libft)
+add_subdirectory(libft/printf)
 
 add_executable(minishell
         cd.c
@@ -12,9 +16,10 @@ add_executable(minishell
         lexer.c
         lexer.h
         lexer_utils.c
-        libft.a
         parser.c
         parser.h
         pwd.c
         shell.c
         shell.h)
+
+target_link_libraries(minishell PUBLIC libft printf)
