--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.15.3)
 project(minishell C)
 
 set(CMAKE_C_STANDARD 11)
@@ -10,6 +10,7 @@ add_subdirectory(libft)
 add_subdirectory(libft/printf)
 
 add_executable(minishell
+        env_utils.c
         export.c
         exit.c
         cd.c
