--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.15.3)
+cmake_minimum_required(VERSION 3.16)
 project(minishell C)
 
 set(CMAKE_C_STANDARD 11)
@@ -11,6 +11,8 @@ add_subdirectory(libft/printf)
 
 add_executable(minishell
         env_utils.c
+        unset.c
+        unset.h
         export.c
         exit.c
         cd.c
