In iterm there are no crashes

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         ::::::::             #
 #    Makefile                                           :+:    :+:             #
 #                                                      +:+                     #
-#    By: skorteka <skorteka@student.codam.nl>         +#+                      #
+#    By: sam <sam@student.codam.nl>                   +#+                      #
 #                                                    +#+                       #
 #    Created: 2019/10/29 10:06:20 by skorteka      #+#    #+#                  #
-#    Updated: 2020/06/05 15:30:08 by skorteka      ########   odam.nl          #
+#    Updated: 2020/06/20 15:28:42 by sam           ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
