--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(minishell
 		utils/free_utils.c
 		utils/lexer_utils.c
 		utils/linkedlist_utils.c
+		utils/lexer_extract_utils.c
 		utils/other_utils.c
 		utils/pipe_utils.c
 		utils/utils.h
