Added check function, now checking dynamically for multiple symbols or ridirects. Seems to be working nicely in comi with check redirect function in parser.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable(minishell
 		expand.c
 		expand.h
 		exit_code.c
-		redirection.c)
+		redirection.c
+		check.c)
 
 target_link_libraries(minishell PUBLIC libft printf)
